# epicChargeSharing

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  epicChargeSharing.cc  epicToy.cc  fitting.tex  mkdocs.yml  requirements.txt  visualize_neighborhoods.py
.github/workflows/: docs.yml  eicrecon-plugin.yml  format-check.yml  standalone.yml
analysis/diagnostics/: analyze_threshold_sweep.py  compare_thresholds.py  quick_2d_distance.py
analysis/fitting/: Fi_x.py  plotFitGaus1D.C  run_gaussian_fits.py  sigma_f_x.py
analysis/grid/: plotChargeNeighborhood.C  plotResolutionOnGrid.C
analysis/python/: PlotChargeLinesGaussian.py  run.py
analysis/sweep/: run_fit_configs.py  sweep_analysis.py  sweep_config.yaml  (+2 more)
core/: CMakeLists.txt  ChargeSharingCore.hh  GaussianFit.hh
core/include/chargesharing/core/: ChargeSharingCore.hh  NoiseModel.hh
core/include/chargesharing/fit/: GaussianFit.hh
core/src/: ChargeSharingCore.cc  GaussianFit.cc  NoiseModel.cc
diagnostic/: pad_discretization.C  plotHitsOnGrid.C  plotProcessing2D.C  processing2D.C  processing2D_plots.C  processing3D.C
docs/: FITTING_OPTIMIZATION_REPORT.md  FitGaussian1D_Performance_Report.md  METADATA_ANALYSIS_REPORT.md  NamingConventions.md  PERFORMANCE_OPTIMIZATION_REPORT.md  ROOT_OUTPUT_BRANCHES.md  ROOT_UPGRADES_REPORT.md  UNIMPLEMENTED_TODO_REPORT.md  analysis-guide.md  architecture.md  configuration.md  edm4hep-integration-implementation-report.md  eicrecon-plugin-testing-report.md  getting-started.md  index.md  physics-model.md
eicrecon/: CMakeLists.txt  README.md  test_b0_lumi.xml
eicrecon/include/: ChargeSharingClustering.h  ChargeSharingClusteringConfig.h  ChargeSharingClustering_factory.h  ChargeSharingConfig.h  ChargeSharingCore.hh  ChargeSharingMonitor.h  ChargeSharingReconFactory.h  ChargeSharingReconstructor.h  ChargeSharingReconstructor_factory.h
eicrecon/src/: ChargeSharingClustering.cc  ChargeSharingMonitor.cc  ChargeSharingReconFactory.cc  ChargeSharingReconPlugin.cc  ChargeSharingReconstructor.cc
eicrecon/src/algorithms/: CMakeLists.txt
eicrecon/src/algorithms/reco/: LGADChargeSharingRecon.cc  LGADChargeSharingRecon.h  LGADChargeSharingReconConfig.h
eicrecon/src/algorithms/tracking/: LGADGaussianClustering.cc  LGADGaussianClustering.h  LGADGaussianClusteringConfig.h
eicrecon/src/benchmarks/lgad_chargesharing/: CMakeLists.txt  LGADChargeSharingMonitor.cc  LGADChargeSharingMonitor.h  LGAD_chargesharing_benchmark.cc  run_b0.sh  run_lumi.sh  validate.py
eicrecon/src/detectors/B0TRK/: B0TRK_lgad_chargesharing.cc
eicrecon/src/detectors/LumiSpec/: CMakeLists.txt  LumiSpec_lgad_chargesharing.cc
eicrecon/src/factories/reco/: LGADChargeSharingRecon_factory.h
eicrecon/src/factories/tracking/: LGADGaussianClustering_factory.h
eicrecon/src/tests/algorithms/: CMakeLists.txt  test_LGADChargeSharingRecon.cc  test_LGADGaussianClustering.cc
eicrecon/test/: constants.h  run_all_tests.sh  steering.py  validate.py
eicrecon/test/b0/: gen_b0_particles.py  run_b0_test.sh
eicrecon/test/lumi/: PropagateAndConvert.cxx  gen_lumi_bh.py  lumi_particles.cxx  run_lumi_dhevang.sh  run_lumi_test.sh
farm/: Fi_x.py  Q_x.py  control.yaml  farmer.py  run_fit_configs.py  run_gaussian_fits.py  run_slides_sweep.py  sigma_f_x.py  sweep_analysis.py  sweep_config.yaml  sweep_x.py
gui/: color.py  neighborhood.py  res.py
include/: 2DGaussCeres.hh  2DGaussianFit.hh  2DGaussianFitCeres.hh  2DGaussianFitCeresOptimized.hh  2DGaussianFitROOT.hh  2DGenLorentzFitCeres.hh  2DLorentzFit.hh  2DLorentzianFitCeres.hh  2DLorentzianFitROOT.hh  2DPowerLorentzCeres.hh  2DPowerLorentzianFitCeres.hh  2DSkewedLorentzianFitCeres.hh  3DGaussFit.hh  3DGaussianFitCeres.hh  3DLorentzianFitCeres.hh  3DPowerLorentzCeres.hh  3DPowerLorentzianFitCeres.hh  ActionInitialization.hh  BitFieldCoder.hh  CeresLoggingInit.hh  CeresUtils.hh  ChargeSharingCalculator.hh  Config.hh  Constants.hh  Control.hh  CrashHandler.hh  DetectorConstruction.hh  DetectorMessenger.hh  EDM4hepIO.hh  EventAction.hh  FitUncertainty.hh  Gaussian3DFitter.hh  GaussianFitter.hh  LorentzFit3D.hh  MinuitGaussianFitter.hh  NeighborhoodUtils.hh  PhysicsList.hh  PowerLorentzFit2D.hh  PrimaryGenerator.hh  RDataFrameHelpers.hh  (+8 more)
macros/: run.mac  run_b0.mac  run_center_100k.mac  run_edge_100k.mac  run_lumi.mac  run_random_100k.mac  run_random_300k.mac  vis.mac
plugins/eicrecon/: CMakeLists.txt
plugins/eicrecon/include/: ChargeSharingConfig.h  ChargeSharingReconstructor.h
plugins/eicrecon/src/: ChargeSharingReconFactory.cc  ChargeSharingReconstructor.cc
proc/: makeCombinedDeltas.C  processing2D.C  processing2D_parallel.C  processing3D.C  processing3D_parallel.C
python/: 2DFitsPlots.py  3DFitsPlots.py  3dFitsPlots.py  CalcRes.py  ChargeNeighberhood.py  Gaussian2DFitsDiagsPDF.py  Gaussian2DFitsPDF.py  Gaussian3DFitsPDF.py  GaussianFitsPDF.py  Lorentzian2DFitsDiagsPDF.py  Lorentzian3DFitsPDF.py  LorentzianFitsPDF.py  PowerLorentzian2DFitsDiagsPDF.py  PowerLorentzianFitsPDF.py  alpha_demo.py  calc_res.py  charge_sim.py  gauss_fit_plots.py  run.py  visualize_hits_pixels.py
site/: 404.html  Doxyfile  index.html  sitemap.xml
src/: 2DGaussCeres.cc  2DGaussFit.cc  2DGaussianFit.cc  2DGaussianFitCeres.cc  2DGaussianFitROOT.cc  2DGenLorentzFitCeres.cc  2DLorentzCeres.cc  2DLorentzFit.cc  2DLorentzianFitCeres.cc  2DLorentzianFitROOT.cc  2DPowerLorentzCeres.cc  2DPowerLorentzFit.cc  2DPowerLorentzianFitCeres.cc  2DSkewedLorentzianFitCeres.cc  3DGaussCeres.cc  3DGaussFit.cc  3DGaussianFitCeres.cc  3DLorentzCeres.cc  3DLorentzFit.cc  3DLorentzianFitCeres.cc  3DPowerLorentzCeres.cc  3DPowerLorentzFit.cc  3DPowerLorentzianFitCeres.cc  ActionInitialization.cc  CeresLoggingInit.cc  CeresUtils.cc  ChargeSharingCalculator.cc  ChargeUtils.h  CrashHandler.cc  DetectorConstruction.cc  DetectorMessenger.cc  EDM4hepIO.cc  EventAction.cc  FitGaus1D.C  FitGaus2D.C  FitGaussian1D.C  FitGaussian2D.C  GaussFit2D.cc  GaussFit3D.cc  Gaussian3DFitter.cc  (+18 more)
tests/: CMakeLists.txt  test_charge_sharing_core.cpp  test_gaussian_fit.cpp
(+80 files in other folders)
